service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sportlink-service
  namespace: sportlink
spec:
  selector:
    app: sportlink
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
